--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 	<ul>
-		<li><a href="https://amzn.to/2IFLVWW">Catching Fire</a></li>
-		<li><a href="https://amzn.to/2KrP7Tf">The Great Gatsby</a></li>
-		<li><a href="https://amzn.to/2Ij8tgU">Incendiary</a></li>
-		<li><a href="https://amzn.to/2InkAFF">I Sailed with Magellan</a></li>
-		<li><a href="https://amzn.to/2L16JGR">The Third Policeman</a></li>
-		<li><a href="https://amzn.to/2wO9hES">The Known World</a></li>
-		<li><a href="https://amzn.to/2KsmLse">Shane</a></li>
-		<li><a href="https://amzn.to/2L0pcTI">Flowers for Algernon </a></li>
-		<li><a href="https://amzn.to/2ImI4P5">Fahrenheit 451</a></li>
-		<li><a href="https://amzn.to/2L2woyE">Into the Wild</a></li>
+		<li><a href="https://amzn.to/2IFLVWW" target='_blank'>Catching Fire</a></li>
+		<li><a href="https://amzn.to/2KrP7Tf" target='_blank'>The Great Gatsby</a></li>
+		<li><a href="https://amzn.to/2Ij8tgU" target='_blank'>Incendiary</a></li>
+		<li><a href="https://amzn.to/2InkAFF" target='_blank'>I Sailed with Magellan</a></li>
+		<li><a href="https://amzn.to/2L16JGR" target='_blank'>The Third Policeman</a></li>
+		<li><a href="https://amzn.to/2wO9hES" target='_blank'>The Known World</a></li>
+		<li><a href="https://amzn.to/2KsmLse" target='_blank'>Shane</a></li>
+		<li><a href="https://amzn.to/2L0pcTI" target='_blank'>Flowers for Algernon </a></li>
+		<li><a href="https://amzn.to/2ImI4P5" target='_blank'>Fahrenheit 451</a></li>
+		<li><a href="https://amzn.to/2L2woyE" target='_blank'>Into the Wild</a></li>
 	</ul>
 	
 </body>
