--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>keepers</title>
+	<style>
+		li {
+			padding-bottom: 3px;
+		}
+	</style>
 </head>
 <body>
 	<ul>
